# sahuagin

./: .gitignore  .gitmodules  .sqlfluff  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  requirements.txt  server.txt
.devcontainer/: Dockerfile.devcontainer  devcontainer.json  docker-compose.yml  poststart.sh
.github/workflows/: ci.yml  docker-release.yml
bind-mounts/home-index-caption/imagemagick/: policy.xml
notebooks/: test_1.ipynb
sql/: 00_init.sql  schema.sql
sql/examples/: test_generation.sql
sql/functions/: check_unmasking.sql  debug_log.sql  get_activation_full_path.sql  get_grouping_at_time.sql  get_state.sql  validate_state.sql
sql/procedures/: create_mechanism.sql  create_unmasking.sql  generate_grouping.sql  generate_state.sql  lock_value.sql
sql/schema/: extensions.sql  tables.sql  types.sql
src/: Create the Sahuagin Database.ipynb  Minimal Test of Sahuagin Features.ipynb  get_page.sql  main.rs  procedures.mariadb.sql  procedures.postgres.sql  procedures.sql  schema.mariadb.sql  schema.postgres.sql  schema.sql  v2.mariadb.sql
test/: add-data.sh  basic_gen_test.sql  clear-data.sh  jikry_test.sql  print_logs.sh  reset.sh  test.txt  test_1.ipynb
tests/: conftest.py  helpers.py  test_create_mechanism.py  test_create_unmasking.py  test_generate_grouping.py  test_lock_value.py  test_regeneration.py  test_validate_state.py
