[package]
name = "sahuagin"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "*", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "*", features = ["full"] }
axum = "*"
hyper = "*"
serde = { version = "*", features = ["derive"] }
utoipa = "*"
utoipa-swagger-ui = { version = "*", features = ["axum"] }
